test docker compose local
